# Sunshine

cmake/compile_definitions/: common.cmake
src/: audio.cpp  wavwriter.c  wavwriter.h
tools/: CMakeLists.txt  aac.cpp  enc_test.cpp  fdkaac_dec.cpp  fdkaac_dec.h  fdkaac_enc.cpp  wavwriter.c  wavwriter.h
